k3s-deploy/blog/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: writefreely-db
spec:
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb-image
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: db-data
              mountPath: /config
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: writefreely-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: writefreely-db
spec:
  ports:
    - port: 3306
  selector:
    app: mariadb
