k3s-deploy/blog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-compose-service
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 8080 # K8s Service 监听端口
      targetPort: 8080 # Docker Compose 服务的实际端口
---
apiVersion: v1
kind: Endpoints
metadata:
  name: docker-compose-service
  namespace: default
subsets:
  - addresses:
      - ip: 195.201.160.55 # 你的宿主机物理内网 IP
    ports:
      - port: 8080
